Revision history for Sys-Syslog

0.28 -- 2009.02.xx -- Sebastien Aperghis-Tramoni (SAPER)
        [CODE] Modify can_load() so it can print the warnings if desired.
        [CODE] CPAN-RT#44410: Provide fallback macros in Syslog.xs in
        order to compile on Novell Netware.
        [TESTS] In blead, the distribution was moved from ext/Sys/Syslog
        to ext/Sys-Syslog. t/constants.t had to be fixed (Vincent Pit).
        [DIST] Bleadperl no longer require an empty MAN3PODS (Nicholas Clark).
        [DIST] Removed unneeded modules in Makefile.PL (Nicholas Clark).

0.27 -- 2008.09.21 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Fixed compilation on Win32, thanks to Serguei Trouchelle.
        Also added stubs so calling the XS functions will never fail.
        [TESTS] t/pod.t now also uses Pod::Checker.

0.26 -- 2008.06.16 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Make Sys::Syslog works with Perl 5.10.0 (because of 
        ExtUtils::Constant::ProxySubs).
        [CODE] setlogsock() is now a little more strict about its arguments.

0.25 -- 2008.05.17 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#34691: Fixed an incorrect call to sysopen() which
        prevented Sys::Syslog from working on some Solaris systems. 
        Thanks to Paul Townsend. 
        [BUGFIX] CPAN-RT#34753: Fixed a slowness introduced in v0.19 (which 
        was to work around OSX syslog own slowness). Thanks to Alex Efros.
        [BUGFIX] CPAN-RT#35952: Fixed a bug with the "nofatal" option.
        [BUGFIX] CPAN-RT#35189: Fixed a bug in xlate().
        [BUGFIX] Fixed build on Win32, thanks to Adam Kennedy.
        [FEATURE] setlogsock() now interprets the second argument as the 
        hostname for network mechanisms.
        [DIST] Add AUTHOR to WriteMakefile() in order to fix the META.yml
        generated by ExtUtils::MakeMaker.
        [TESTS] Improved t/pod.t with Pod::Checker.

0.24 -- 2007.12.31 -- Sebastien Aperghis-Tramoni (SAPER)