@@ -1,6 +1,8 @@
 Revision history for Sys-Syslog
 
 0.28 -- 2009.02.xx -- Sebastien Aperghis-Tramoni (SAPER)
+        [FEATURE] New API for setlogsock(), in order to allow the setting
+        of new options. Thanks to Jake Scott for the idea.
         [CODE] Modify can_load() so it can print the warnings if desired.
         [CODE] CPAN-RT#44410: Provide fallback macros in Syslog.xs in
         order to compile on Novell Netware.
